# leenapi

./: README.md
apps/dashboard/: README.md  main.py  pyproject.toml
apps/dashboard/scripts/: dashboard.service  kiosk.sh
apps/dashboard/src/: app.py  store.py
apps/dashboard/templates/: display.html  phone.html
apps/dashboard/tests/: test_api.py  test_store.py
apps/itunes/: .gitignore  README.md  main.py  pyproject.toml
apps/itunes/.claude/: pi-segment.md
apps/itunes/scripts/: download_model.sh  setup_model.sh
apps/itunes/src/: camera.py  segmenter.py
apps/itunes/tests/: test_persist.py  test_vector_edges.py
docs/superpowers/plans/: 2026-07-18-dashboard-phase-1.md
docs/superpowers/specs/: 2026-07-18-smart-display-design.md
