[project]
name = "pi-segment"
version = "0.1.0"
description = "Raspberry Pi 5 camera FastSAM segment-everything, served as an MJPEG web stream"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3",   # provides FastSAM (pulls torch/torchvision CPU wheels)
    "ncnn>=1.0",          # fast CPU inference backend for the NCNN-exported model
    "opencv-python>=4.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Build-time only: the `pnnx` converter is needed to export the .pt model to
# NCNN (scripts/setup_model.sh). Not needed at runtime, hence an extra.
export = [
    "pnnx",
]

[tool.uv]
# The uv-managed 3.12 venv is retained; torch/ultralytics also support 3.13 now
# that MediaPipe's cp312-only constraint is gone.
python-preference = "only-managed"
